[gd_scene load_steps=10 format=3 uid="uid://w2ps71th4apk"]

[ext_resource type="PackedScene" uid="uid://bw8xmktsj350i" path="res://map.tscn" id="1_1xlkj"]
[ext_resource type="Script" uid="uid://l8c8w5reb34w" path="res://interactive_map.gd" id="1_gguev"]
[ext_resource type="PackedScene" uid="uid://bfy3tjx8ng10d" path="res://player.tscn" id="3_s627a"]
[ext_resource type="Texture2D" uid="uid://ds5k654jpnhrw" path="res://assets/UI Pack/PNG/Blue/Double/arrow_basic_n.png" id="4_a22q5"]
[ext_resource type="Texture2D" uid="uid://kw3q62brbxdv" path="res://assets/UI Pack/PNG/Blue/Double/arrow_basic_n_small.png" id="5_qu25q"]
[ext_resource type="Texture2D" uid="uid://jfon1n1jdtwx" path="res://assets/UI Pack/PNG/Blue/Double/arrow_basic_s.png" id="6_kndq7"]
[ext_resource type="Texture2D" uid="uid://b8bpa87rbo42b" path="res://assets/UI Pack/PNG/Blue/Double/arrow_basic_s_small.png" id="7_cl17q"]
[ext_resource type="Texture2D" uid="uid://ce3umnltse1bp" path="res://assets/UI Pack/PNG/Yellow/Double/star.png" id="8_kndq7"]
[ext_resource type="Theme" uid="uid://cusk66dj8nm1" path="res://basetheme.tres" id="9_cl17q"]

[node name="InteractiveMap" type="Node2D"]
script = ExtResource("1_gguev")

[node name="MapHolder" type="Node2D" parent="."]

[node name="Map" parent="MapHolder" instance=ExtResource("1_1xlkj")]

[node name="Label" parent="MapHolder/Map/Buildings/Places/FireDepartment" index="0"]
offset_left = -79.0
offset_top = -65.0
offset_right = 8.0
offset_bottom = -23.0

[node name="Label" parent="MapHolder/Map/Buildings/Places/Park" index="0"]
offset_left = -84.0
offset_top = -47.5
offset_right = 3.0
offset_bottom = -5.5

[node name="Label" parent="MapHolder/Map/Buildings/Places/DepartmentStore" index="0"]
offset_left = -95.0
offset_right = -8.0

[node name="Player" parent="." instance=ExtResource("3_s627a")]
visible = false
collision_layer = 0
collision_mask = 0

[node name="Camera2D" parent="Player" index="2"]
limit_left = -1700
limit_top = -1300
limit_right = 2000
limit_bottom = 1200

[node name="AnimatedSprite2D" parent="Player" index="3"]
visible = false
frame = 0

[node name="CameraUI" type="CanvasLayer" parent="Player"]

[node name="VBoxContainer" type="VBoxContainer" parent="Player/CameraUI"]
anchors_preset = -1
anchor_left = 0.676215
anchor_top = 0.429012
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 182.0
offset_top = 136.0
offset_right = -44.0
offset_bottom = -38.0
grow_horizontal = 2
grow_vertical = 2

[node name="ZoomIn" type="TextureButton" parent="Player/CameraUI/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 6
texture_normal = ExtResource("4_a22q5")
texture_pressed = ExtResource("5_qu25q")
stretch_mode = 0

[node name="ZoomOut" type="TextureButton" parent="Player/CameraUI/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 6
texture_normal = ExtResource("6_kndq7")
texture_pressed = ExtResource("7_cl17q")
stretch_mode = 0

[node name="Star" type="Sprite2D" parent="."]
position = Vector2(9, 2)
scale = Vector2(0.452592, 0.452592)
texture = ExtResource("8_kndq7")

[node name="Label" type="Label" parent="Star"]
offset_left = -57.4468
offset_top = 41.9804
offset_right = 56.5532
offset_bottom = 110.98
theme = ExtResource("9_cl17q")
theme_override_font_sizes/font_size = 48
text = "Start"

[connection signal="pressed" from="Player/CameraUI/VBoxContainer/ZoomIn" to="." method="_on_zoom_in_pressed"]
[connection signal="pressed" from="Player/CameraUI/VBoxContainer/ZoomOut" to="." method="_on_zoom_out_pressed"]

[editable path="MapHolder/Map"]
[editable path="Player"]
